Bug 475547 - Git Plugin Inappropriately Gets Disabled If You Use the Search Bar on the Context Menu Settings Page
Summary: Git Plugin Inappropriately Gets Disabled If You Use the Search Bar on the Con...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: plugins: git (other bugs)
Version First Reported In: 23.08.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Dörner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-13 04:38 UTC by Dashon
Modified: 2023-10-24 21:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dashon 2023-10-13 04:38:20 UTC
SUMMARY
Whenever I use the search bar on the context menu settings page and then search for any plugin that is not git and disable that plugin from the filtered results. The git plugin will become disabled and then ask me if I want to restart dolphin in order for the changes to take effect.


STEPS TO REPRODUCE
1. Open dolphin
2. If you use the toolbar then go to settings and if you use the hamburger menu then go to configure
3. Click configure dolphin
4. Click on the `context menu` tab and from there activate the git plugin if it is not already active.
5. Restart dolphin for the changes to take effect.
6. Repeat steps 1 through 4. Or if you already hat git enabled. Skip step 5.
7. Now that you are back on the context menu tab. Use the search bar and search for some plugin that is active and is not git.
8. Disabled that plugin.

OBSERVED RESULT
After disabling the desired plugin and then clicking apply. The dialogue for restarting dolphin in order for changes to the git plugin to take effect pops up.

EXPECTED RESULT
Only the plugin that the user explicitly disabled should be disabled.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.11
Kernel Version: 6.5.7-zen1-1-zen (64-bit)
Graphics Platform: X11 | Also tested on Wayland.
Processors: 16 × AMD Ryzen 7 5800X 8-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3080/PCIe/SSE2
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7C95
System Version: 1.0

EXTRA INFORMATION
I also tested kde neon stable and it is effected as well.
Comment 1 Bug Janitor Service 2023-10-18 23:01:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/630
Comment 2 Nicolas Fella 2023-10-24 20:40:36 UTC
Git commit ef59e42c40df5e873a1a1b6c2173d5b55641a783 by Nicolas Fella.
Committed on 24/10/2023 at 22:30.
Pushed by nicolasfella into branch 'master'.

Process correct model when applying service menu changes

The listview's model is a filter model, we must iterate through the source,
otherwise we get incorrect results

M  +9    -11   src/settings/contextmenu/contextmenusettingspage.cpp

https://invent.kde.org/system/dolphin/-/commit/ef59e42c40df5e873a1a1b6c2173d5b55641a783
Comment 3 Nicolas Fella 2023-10-24 21:09:55 UTC
Git commit 4202fbdeca991f1fb043ecdecbc00f67b24e8e2e by Nicolas Fella.
Committed on 24/10/2023 at 23:03.
Pushed by nicolasfella into branch 'release/23.08'.

Process correct model when applying service menu changes

The listview's model is a filter model, we must iterate through the source,
otherwise we get incorrect results
(cherry picked from commit ef59e42c40df5e873a1a1b6c2173d5b55641a783)

M  +9    -11   src/settings/contextmenu/contextmenusettingspage.cpp

https://invent.kde.org/system/dolphin/-/commit/4202fbdeca991f1fb043ecdecbc00f67b24e8e2e