Process correct model when applying service menu changes

The listview's model is a filter model, we must iterate through the source,
otherwise we get incorrect results

BUG: 475547